<resources>
    <!-- App -->
    <string name="app_name">Popular Movies</string>

    <!-- Main -->
    <string-array name="filter_alert_options">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>

    <string name="filter_alert_title">Select a filter</string>
    <string name="empty_text_favorites">No favorites selected</string>
    <string name="error_text_no_connection">Network connection currently unavailable</string>
    <string name="button_view_favorites">View favorites</string>
    <string name="button_details_visibility_title">Details Visibility</string>

    <!-- JsonUtils Fallbacks -->
    <string name="fallback_id">No ID Available</string>
    <string name="fallback_title">No Title Available</string>
    <string name="fallback_poster_path">No Poster Available</string>
    <string name="fallback_overview">No Description Available</string>
    <string name="fallback_vote_average">No User Rating Available</string>
    <string name="fallback_release_date">No Release Available</string>
    <string name="fallback_key">No Key Available</string>
    <string name="fallback_name">No Name Available</string>
    <string name="fallback_site">No Site Available</string>
    <string name="fallback_size">No Size Available</string>
    <string name="fallback_type">No Type Available</string>
    <string name="fallback_author">No Author Available</string>
    <string name="fallback_content">No Content Available</string>

    <!-- Details -->
    <string name="desc_release_date">Released</string>
    <string name="desc_user_rating">Average User Rating</string>
    <string name="desc_overview">Plot Summary</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_reviews">Reviews</string>
    <string name="tab_trailers">Trailers</string>
    <string name="empty_text_reviews">No Reviews Available</string>
    <string name="empty_text_trailers">No Trailers Available</string>
    <string name="play_intent_chooser_title">Play Using</string>
    <string name="share_intent_chooser_title">Share Using</string>

    <!-- Content Descriptions -->
    <string name="movie_poster_image_content_desc">Movie Poster</string>
    <string name="review_author_icon_content_desc">Movie Review Author</string>
    <string name="favorite_icon_content_desc">Toggle Favorite</string>
    <string name="play_trailer_icon_content_desc">Play Trailer</string>
    <string name="share_trailer_icon_content_desc">Share Trailer</string>

</resources>