<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.main.MainActivity">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/tv_check_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/standard_text_size"
            android:text="@string/error_text_no_connection"/>

        <Button
            android:id="@+id/btn_view_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/standard_margin_top"
            android:padding="@dimen/standard_padding"
            android:textColor="@color/colorText"
            android:background="@color/colorAccent"
            android:text="@string/button_view_favorites"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/standard_text_size"
        android:text="@string/empty_text_favorites"
        android:visibility="invisible"/>

    <com.example.android.popularmovies.ui.main.EmptySafeRecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>
</FrameLayout>