<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".35"
        android:padding="10dp"
        android:contentDescription="@string/poster_item_content_desc"/>

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/custom_view_background"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_weight=".65">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_release_date_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_release_date"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_user_rating_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_user_rating"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_overview_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_overview"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:textSize="12sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>